# cargo-valgrind

./: .gitignore  .mailmap  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: beta.yaml  ci.yaml  clippy.yaml  deploy.yml  msrv.yaml  release.yaml  style.yaml
src/: driver.rs  lib.rs  main.rs  output.rs  panic.rs  tests.rs
src/metadata/: mod.rs  sample-metadata.json  tests.rs  version.rs
src/valgrind/: mod.rs
src/valgrind/xml/: mod.rs  tests.rs  version5-badfd.xml  version6-2.xml  version6.xml
src/valgrind_xml/: mod.rs  tests.rs  vg.xml
suppressions/: README.md  rust-1.83  rust-1.84  rust-1.86  rust-1.93  std::thread::new-1.86  std::thread::new-1.93  std_panic_catch_unwind  std_thread_new
tests/: a-default-cargo-project.rs  cli.rs  regression.rs  target_lookup.rs
tests/binary/: Cargo.toml
tests/corpus/: Cargo.toml  issue-13.rs  issue-20.rs  issue-36.rs  issue-70.rs  issue-74.rs
tests/default-new-project/: Cargo.toml
tests/ffi-bug/: Cargo.toml
tests/ffi-bug/src/: main.rs
tests/program-aborts/: Cargo.toml
tests/wrong-fd-usage/: Cargo.toml
tests/wrong-fd-usage/src/: main.rs
