[package]
name = "cargo-valgrind"
version = "2.2.1"
authors = ["Julian Frimmel <julian.frimmel@gmail.com>"]
edition = "2018"
description = "A cargo subcommand for running valgrind"
repository = "https://github.com/jfrimmel/cargo-valgrind"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["cargo", "subcommand", "cargo-subcommand", "valgrind", "cli"]
categories = ["development-tools", "development-tools::cargo-plugins"]
exclude = [".github", ".vscode", "CHANGELOG.md", "tests"]

[features]
default = ["textwrap"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde-xml-rs = { version = "0.5", default-features = false }
colored = "1.9.4"
bytesize = "1"
textwrap = { version = "0.14", optional = true, features = ["terminal_size"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
